@@ -1,9 +1,23 @@
 package dev.langchain4j.model.bedrock;
 
+import static dev.langchain4j.internal.RetryUtils.withRetryMappingExceptions;
+import static dev.langchain4j.internal.Utils.getOrDefault;
+import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
+import static dev.langchain4j.model.bedrock.Json.fromJson;
+import static dev.langchain4j.model.bedrock.Json.toJson;
+import static java.util.Arrays.stream;
+import static java.util.stream.Collectors.toList;
+import static software.amazon.awssdk.regions.Region.US_EAST_1;
+
 import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.data.segment.TextSegment;
-import dev.langchain4j.model.embedding.EmbeddingModel;
+import dev.langchain4j.model.embedding.DimensionAwareEmbeddingModel;
 import dev.langchain4j.model.output.Response;
+import java.nio.charset.Charset;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import software.amazon.awssdk.auth.credentials.AwsCredentialsProvider;
 import software.amazon.awssdk.auth.credentials.DefaultCredentialsProvider;
 import software.amazon.awssdk.core.SdkBytes;
@@ -12,20 +26,6 @@ import software.amazon.awssdk.services.bedrockruntime.BedrockRuntimeClient;
 import software.amazon.awssdk.services.bedrockruntime.model.InvokeModelRequest;
 import software.amazon.awssdk.services.bedrockruntime.model.InvokeModelResponse;
 
-import java.nio.charset.Charset;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import static dev.langchain4j.internal.RetryUtils.withRetry;
-import static dev.langchain4j.internal.Utils.getOrDefault;
-import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
-import static dev.langchain4j.model.bedrock.internal.Json.fromJson;
-import static dev.langchain4j.model.bedrock.internal.Json.toJson;
-import static java.util.Arrays.stream;
-import static java.util.stream.Collectors.toList;
-import static software.amazon.awssdk.regions.Region.US_EAST_1;
-
 /**
  * Bedrock Cohere embedding model with support for both versions:
  * {@code cohere.embed-english-v3} and {@code cohere.embed-multilingual-v3}
@@ -33,44 +33,55 @@ import static software.amazon.awssdk.regions.Region.US_EAST_1;
  * See more details <a href="https://docs.cohere.com/v2/docs/amazon-bedrock">here</a> and
  * <a href="https://docs.aws.amazon.com/bedrock/latest/userguide/model-parameters-embed.html">here</a>.
  */
-public class BedrockCohereEmbeddingModel implements EmbeddingModel {
+public class BedrockCohereEmbeddingModel extends DimensionAwareEmbeddingModel {
+
+    private static final int DEFAULT_MAX_SEGMENTS_PER_BATCH = 96;
 
     private final BedrockRuntimeClient client;
     private final String model;
     private final String inputType;
     private final String truncate;
     private final int maxRetries;
+    private final int maxSegmentsPerBatch;
 
     public BedrockCohereEmbeddingModel(Builder builder) {
         this.client = getOrDefault(builder.client, () -> initClient(builder));
         this.model = ensureNotBlank(builder.model, "model");
         this.inputType = ensureNotBlank(builder.inputType, "inputType");
         this.truncate = builder.truncate;
-        this.maxRetries = getOrDefault(builder.maxRetries, 3);
+        this.maxRetries = getOrDefault(builder.maxRetries, 2);
+        this.maxSegmentsPerBatch = getOrDefault(builder.maxSegmentsPerBatch, DEFAULT_MAX_SEGMENTS_PER_BATCH);
     }
 
     private BedrockRuntimeClient initClient(Builder builder) {
         return BedrockRuntimeClient.builder()
                 .region(getOrDefault(builder.region, US_EAST_1))
-                .credentialsProvider(getOrDefault(builder.credentialsProvider,
-                        () -> DefaultCredentialsProvider.builder().build()))
+                .credentialsProvider(
+                        getOrDefault(builder.credentialsProvider, () -> DefaultCredentialsProvider.builder()
+                                .build()))
                 .build();
     }
 
     @Override
     public Response<List<Embedding>> embedAll(List<TextSegment> textSegments) {
+        List<Embedding> embeddings = new ArrayList<>();
 
-        Map<String, Object> requestParameters = toRequestParameters(textSegments);
-        String requestJson = toJson(requestParameters);
+        for (int i = 0; i < textSegments.size(); i += maxSegmentsPerBatch) {
+            List<TextSegment> batch = textSegments.subList(i, Math.min(textSegments.size(), i + maxSegmentsPerBatch));
+            Map<String, Object> requestParameters = toRequestParameters(batch);
+            String requestJson = toJson(requestParameters);
 
-        InvokeModelResponse invokeModelResponse = withRetry(() -> invoke(requestJson), maxRetries);
+            InvokeModelResponse invokeModelResponse =
+                    withRetryMappingExceptions(() -> invoke(requestJson), maxRetries, BedrockExceptionMapper.INSTANCE);
 
-        String responseJson = invokeModelResponse.body().asUtf8String();
-        BedrockCohereEmbeddingResponse embeddingResponse = fromJson(responseJson, BedrockCohereEmbeddingResponse.class);
+            String responseJson = invokeModelResponse.body().asUtf8String();
+            BedrockCohereEmbeddingResponse embeddingResponse =
+                    fromJson(responseJson, BedrockCohereEmbeddingResponse.class);
 
-        List<Embedding> embeddings = stream(embeddingResponse.getEmbeddings().getFloatEmbeddings())
-                .map(Embedding::from)
-                .collect(toList());
+            embeddings.addAll(stream(embeddingResponse.getEmbeddings().getFloatEmbeddings())
+                    .map(Embedding::from)
+                    .toList());
+        }
 
         return Response.from(embeddings);
     }
@@ -105,6 +116,7 @@ public class BedrockCohereEmbeddingModel implements EmbeddingModel {
         private Region region;
         private AwsCredentialsProvider credentialsProvider;
         private Integer maxRetries;
+        private Integer maxSegmentsPerBatch;
 
         public Builder model(Model model) {
             return model(model.getValue());
@@ -153,13 +165,17 @@ public class BedrockCohereEmbeddingModel implements EmbeddingModel {
             return this;
         }
 
+        public Builder maxSegmentsPerBatch(Integer maxSegmentsPerBatch) {
+            this.maxSegmentsPerBatch = maxSegmentsPerBatch;
+            return this;
+        }
+
         public BedrockCohereEmbeddingModel build() {
             return new BedrockCohereEmbeddingModel(this);
         }
     }
 
     public enum Model {
-
         COHERE_EMBED_ENGLISH_V3("cohere.embed-english-v3"),
         COHERE_EMBED_MULTILINGUAL_V3("cohere.embed-multilingual-v3");
 
@@ -175,7 +191,6 @@ public class BedrockCohereEmbeddingModel implements EmbeddingModel {
     }
 
     public enum InputType {
-
         SEARCH_DOCUMENT("search_document"),
         SEARCH_QUERY("search_query"),
         CLASSIFICATION("classification"),
@@ -193,7 +208,6 @@ public class BedrockCohereEmbeddingModel implements EmbeddingModel {
     }
 
     public enum Truncate {
-
         NONE("NONE"),
         START("START"),
         END("END");
